--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "npm run install && npm run build && (cd ./server && npm run start)",
+    "start": "node --max_old_space_size=2048 node_modules/.bin/react-scripts start",
+    "build": "node --max_old_space_size=2048 node_modules/.bin/react-scripts build",,
     "dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
+    "install": "cd server && npm i && cd ../client && npm i"
   },
   "eslintConfig": {
     "extends": "react-app"
