--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.2.13",
+    "@types/react-dom": "^18.2.6",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -14,13 +16,17 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "ts-loader": "^9.4.3",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "web": "webpack"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@types/jwt-decode": "^3.1.0",
+    "@types/react-router-dom": "^5.3.3",
     "gh-pages": "^4.0.0"
   }
 }
