--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tmdb-movie-search",
   "version": "1.0.0",
   "private": true,
-  "proxy": "https://moviewiki.herokuapp.com",
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@testing-library/jest-dom": "^4.2.4",
