--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.tsx",
   "scripts": {
-    "start": "node server.js",
-    "watch": "nodemon server.js"
+    "start": "node server.tsx",
+    "watch": "nodemon server.tsx"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,9 @@
     "mongoose": "^5.9.10"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
+    "nodemon": "^2.0.3",
+    "typescript": "^5.1.3"
   }
 }
